---
title: ERD Warehouse Distribution System
config:
  theme: default
  layout: elk
---
erDiagram
    roles ||--o{ users : "assigned_to"
    items ||--o{ item_skus : "has_variants"
    item_skus ||--o{ transaction_items : "recorded_in"
    measurement_units ||--o{ transaction_items : "measures"
    recipients ||--o{ transactions : "involved_in"
    items ||--|| measurement_units : "measured_by"
    measurement_units ||--o{ measurement_units : "derived"
    transactions ||--|{ transaction_items : "consists_of"
    sku_measurement_unit_conversions }o--|| item_skus : "converts_for"
    sku_measurement_unit_conversions }o--|| measurement_units : "converts_to"
    users ||--o{ transactions : "created_by"

    roles {
        id VARCHAR(100) PK
        name VARCHAR(100) UK
    }

    users {
        id VARCHAR(100) PK
        name VARCHAR(255)
        username VARCHAR(255) UK
        password VARCHAR(100)
        role_id VARCHAR(100) FK
        profile_photo_path VARCHAR(500)
        remember_token VARCHAR(100)
        created_at DATETIME
        updated_at DATETIME
        deleted_at DATETIME
    }

    settings {
        id VARCHAR(100) PK
        key VARCHAR(255) UK
        value VARCHAR(255)
    }

    %% mendukung konversi secara global atau per sku
    measurement_units {
        id VARCHAR(100) PK
        name VARCHAR(255) UK
        base_measurement_unit_id VARCHAR(100) FK
        conversion INTEGER "nullable"
        is_base boolean
        created_at DATETIME
        updated_at DATETIME
        deleted_at DATETIME
    } 

    recipients {
        id VARCHAR(100) PK
        name VARCHAR(255)
        nickname VARCHAR(255)
        division VARCHAR(255)
        created_at DATETIME
        updated_at DATETIME
        deleted_at DATETIME
    }

    transactions {
        id VARCHAR(100) PK
        type enum "in/out"
        user_id VARCHAR(100) FK
        recipient_id VARCHAR(100) FK
        supplier VARCHAR(255) "For type=in"
        division VARCHAR(255)
        notes text
        transaction_date date
        created_at DATETIME
        updated_at DATETIME
        deleted_at DATETIME
    }

    transaction_items {
        id VARCHAR(100) PK
        transaction_id VARCHAR(100) FK
        item_sku_id VARCHAR(100) FK "Track specific SKU"
        unit_id VARCHAR(100) FK "Satuan transaksi, bisa pakai satuan terkecil bisa tidak"
        quantity INTEGER "Jumlah dalam satuan unit_id"
        base_quantity INTEGER "Jumlah dalam satuan terkecil"
        price DECIMAL(22_4) "Harga modal per unit saat transaksi"
        created_at DATETIME
        updated_at DATETIME
        deleted_at DATETIME
    }

    items {
        id VARCHAR(100) PK
        name VARCHAR(100) UK
        %% description text
        base_measurement_unit_id VARCHAR(100) FK
        created_at DATETIME
        updated_at DATETIME
        deleted_at DATETIME
    }

    item_skus {
        id VARCHAR(100) PK
        item_id VARCHAR(100) FK
        sku VARCHAR(100) UK "Kode SKU unik"
        specification_name VARCHAR(255) "Merk/varian: Sidu, Paperline"
        quantity INTEGER
        price DECIMAL(22_4)
        created_at DATETIME
        updated_at DATETIME
        deleted_at DATETIME
    }

    sku_measurement_unit_conversions {
        id VARCHAR(100)
        measurement_unit_id VARCHAR(100) FK, UK
        item_sku_id VARCHAR(100) FK, UK
        conversion INTEGER
        created_at DATETIME
        updated_at DATETIME
    }